--- a/hanoi/index.html
+++ b/hanoi/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <link rel="stylesheet" type="text/css" href="style.css"></link>
+  <link rel="stylesheet" type="text/css" href="style.css">
   <script src="jquery-1.9.1.js"></script>
   <script src="script.js"></script>
 </head>
