--- a/tictactoe/index.html
+++ b/tictactoe/index.html
@@ -4,7 +4,7 @@
 
 <head>
   <link rel="stylesheet" type="text/css" href="style.css">
-  <script src="jquery-1.9.1.js"></script>
+  <script src="jquery-1.9 .1.js"></script>
   <script src="script.js"></script>
   <title>Tic Tac Toe</title>
 </head>
