--- a/tictactoe/index.html
+++ b/tictactoe/index.html
@@ -4,7 +4,7 @@
 
 <head>
   <link rel="stylesheet" type="text/css" href="style.css">
-  <script src="jquery-1.9 .1.js"></script>
+  <script src="jquery-1.9.1.js"></script>
   <script src="script.js"></script>
   <title>Tic Tac Toe</title>
 </head>
@@ -15,7 +15,7 @@
     <ul class="rows" >
       <li class="row">
         <ul>
-          <li class="cell" id="c00"></li>
+          <li class="cell" id="00"></li>
           <li class="cell" id="c01"></li>
           <li class="cell" id="c02"></li>
         </ul>
