--- a/hanoi/index.html
+++ b/hanoi/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-
+  <!--REV Good organization. Having the first one start full is a nice touch - I left it empty and just populated each turn based on the internal game representation, but this makes plenty of sense since the game's condition is always the same. Only issue I can think of with starting this way is that you can't build taller games. -->
   <div class="board"> BOARD
     <div class="panel">panel1
       <ol>
