Real comments added

--- a/snake/index.html
+++ b/snake/index.html
@@ -9,6 +9,8 @@
   <title>Snake</title>
 </head>
 
+<!-- I think it'd be better to build the rows and cells with jQuery based on the size of the game. Even if you don't want to make the game board a variable size based on user input, this is a lot of unnecessary repitition and 10x10 isn't even that big for Snake. I like the embedded <ul> a lot though. I just floated left and let the pixel size of the grid handle the rows for me, but this is a much better use of "html for structure css for content" --> 
+
 <body>
   <div class="board">
 
